Had trouble centering the big button because from what I remember button is an inline element by default so I experimented with different display which didn't fix it. Also tried the text-align property but that didn't work. I tried the width auto thing and didn't fix it but realized that the width of the button is the white space and I should be adjusting the margin instead. Putting it on margin auto worked.
Final commit and push, very fun exercise especially centering things.

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -21,13 +21,23 @@ body {
 
 .content {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 8px 0px;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  padding: 8px;
+  /* border: 1px solid black; */
 }
 
 button {
+  display: block;
+  margin: 0px auto;
+  font-size: 24px;
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px;
+  /* border: 1px solid black; */
 }
